Scrollbar fix for print

--- a/app/assets/stylesheets/print.scss
+++ b/app/assets/stylesheets/print.scss
@@ -9,7 +9,10 @@
   main {
     width: 100%;
     float: none;
-    overflow-x: hide;
+    overflow: visible;
+  }
+  .table-wrapper {
+    overflow: visible;
   }
   .wrapper {
     padding: 0;
